...
    <!-- ================== -->
    <string name="app_name">SeviBus</string>

    <!-- ================== -->
    <!-- Navigation -->
    <!-- ================== -->
    <string name="navigation_for_you">Para ti</string>
    <string name="navigation_lines">Líneas</string>
    <string name="navigation_map">Mapa</string>
    <string name="navigation_cards">Bonobús</string>
    <string name="navigation_settings">Ajustes</string>
    <string name="navigation_edit_favorites">Editar favoritas</string>
    <string name="navigation_cards_help">Preguntas frecuentes</string>

...
    <!-- Settings Screen -->
    <!-- ================== -->
    <string name="settings_your_profile">Tu perfil</string>
    <string name="settings_appearance">Apariencia</string>
    <string name="settings_dark_mode">Modo oscuro</string>
    <string name="settings_services">Servicios</string>
    <string name="settings_analytics">Permitir estadísticas anónimas</string>
    <string name="settings_analytics_description">Nos ayudan a mejorar la app sin recopilar tu información personal</string>
    <string name="settings_give_feedback">Danos tu opinión</string>
    <string name="settings_feedback_description">¿Tienes algún problemilla o sugerencia? ¡Ayúdanos a mejorar!</string>
    <string name="settings_feedback_email_prompt">Escribe aquí tu opinión o sugerencia</string>
    <string name="settings_feedback_email_diagnostic_info">Información de diagnóstico</string>
    <string name="settings_feedback_email_device">Device</string>
...
